# complex-RAG-guide-playground

./: .gitignore  RAG_pipeline.ipynb  RAG_pipeline.py  helper_functions.py  pyproject.toml  rag_cli.py  requirements.txt
test/: README.md  check_character_codes.py  extract_chapter1.py  search_exact_phrase.py  test.py  test_embeddings_only.py  test_local_embeddings.py  test_quote_extraction.py  test_quote_pattern.py  test_restartable.py  test_robust_quotes.py  test_smart_quotes.py  test_updated_quotes.py
