# pyproject.toml

[project]
name = "my_jupyter_project" # Replace with your project's actual name
version = "0.1.0"
description = "A Jupyter project for LLM and RAG experiments"
requires-python = ">=3.10,<3.12" # Ensure this matches your desired Python version
license = { text = "MIT" }
keywords = ["llm", "rag", "langchain", "pytorch", "jupyter"]
authors = [
    { name = "Your Name", email = "your.email@example.com" },
]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "jupyterlab",
    "langchain-openai",
    "langchain-groq",
    "langchain",
    "faiss-cpu",
    "openai",
    "langchain-core",
    "langgraph",
    "python-dotenv",
    "datasets",
    "ipython",
    "typing-extensions",
    "ragas",
    "pypdf",
    "PyPDF2",
    "pylcs",
    "torch",
    "torchvision",
    "torchaudio",
    "sentence-transformers>=5.0.0",
    "transformers>=4.53.1",
    "langchain-huggingface>=0.3.0",
]

# Optional: Add development dependencies here
[project.group.dev.dependencies]
pytest = "^8.0"
ruff = "^0.3"
